{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 271,
  "lineage": "892cca08-cd89-9b8d-ea41-33487e3ee2b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:internet-gateway/igw-020ae018254ab5993",
            "id": "igw-020ae018254ab5993",
            "owner_id": "538331572700",
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:538331572700:internet-gateway/igw-03752be24376e96ea",
            "id": "igw-03752be24376e96ea",
            "owner_id": "538331572700",
            "vpc_id": "vpc-0bed8dc525d176515"
          },
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:loadbalancer/app/jenkins-lb/2a70aa481600648f",
            "arn_suffix": "app/jenkins-lb/2a70aa481600648f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-lb-1489853081.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:538331572700:loadbalancer/app/jenkins-lb/2a70aa481600648f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-074f9c4195535e564"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b0297de0c4b3065"
              },
              {
                "subnet_id": "subnet-0c9ca306dccad3e2e"
              }
            ],
            "subnets": [
              "subnet-03b0297de0c4b3065",
              "subnet-0c9ca306dccad3e2e"
            ],
            "tags": {
              "Name": "Jenkins-LB"
            },
            "tags_all": {
              "Name": "Jenkins-LB"
            },
            "vpc_id": "vpc-065a831348bb98c54",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/af96434d6bc6a490",
            "certificate_arn": "arn:aws:acm:us-east-1:538331572700:certificate/ac00391a-3277-4c10-a315-58cee561d2e9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:targetgroup/app-lb-tg/d94dfc1c1d856208",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/af96434d6bc6a490",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:loadbalancer/app/jenkins-lb/2a70aa481600648f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.jenkins-lb-https",
            "aws_lb.application-lb",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs",
            "data.aws_route53_zone.dns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/c2f0ca5383e8fd1f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/c2f0ca5383e8fd1f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:loadbalancer/app/jenkins-lb/2a70aa481600648f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/af96434d6bc6a490",
            "certificate_arn": "arn:aws:acm:us-east-1:538331572700:certificate/ac00391a-3277-4c10-a315-58cee561d2e9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:targetgroup/app-lb-tg/d94dfc1c1d856208",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:538331572700:listener/app/jenkins-lb/2a70aa481600648f/af96434d6bc6a490",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:loadbalancer/app/jenkins-lb/2a70aa481600648f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.jenkins-lb-https",
            "aws_lb.application-lb",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs",
            "data.aws_route53_zone.dns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:538331572700:targetgroup/app-lb-tg/d94dfc1c1d856208",
            "arn_suffix": "targetgroup/app-lb-tg/d94dfc1c1d856208",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:538331572700:targetgroup/app-lb-tg/d94dfc1c1d856208",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-target-group"
            },
            "tags_all": {
              "Name": "jenkins-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins-master-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master"
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e14e62525f2e8b8",
            "original_route_table_id": "rtb-0ec768c1300cfcb4e",
            "route_table_id": "rtb-08348d825c53b17b1",
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-worker-default-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd68d4207f2a7cf1",
            "original_route_table_id": "rtb-0476913c222d5fb65",
            "route_table_id": "rtb-0df7a3f1c7ab91d46",
            "vpc_id": "vpc-0bed8dc525d176515"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:route-table/rtb-08348d825c53b17b1",
            "id": "rtb-08348d825c53b17b1",
            "owner_id": "538331572700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020ae018254ab5993",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fa02d76049f1fc9a"
              }
            ],
            "tags": {
              "Name": "Master-Region-RT"
            },
            "tags_all": {
              "Name": "Master-Region-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:538331572700:route-table/rtb-0df7a3f1c7ab91d46",
            "id": "rtb-0df7a3f1c7ab91d46",
            "owner_id": "538331572700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03752be24376e96ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fa02d76049f1fc9a"
              }
            ],
            "tags": {
              "Name": "Worker-Region-RT"
            },
            "tags_all": {
              "Name": "Worker-Region-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bed8dc525d176515"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:538331572700:security-group/sg-0f2a683d8c975a0cb",
            "description": "Allow 22,8080 TCP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2a683d8c975a0cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow traffic from us-east-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "538331572700",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bed8dc525d176515"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:security-group/sg-074f9c4195535e564",
            "description": "Allow 443 traffic to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074f9c4195535e564",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 anywhere from redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "538331572700",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:subnet/subnet-03b0297de0c4b3065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b0297de0c4b3065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "538331572700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:538331572700:subnet/subnet-0f9a4e7c86342446b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9a4e7c86342446b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "538331572700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bed8dc525d176515"
          },
          "dependencies": [
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:subnet/subnet-0c9ca306dccad3e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9ca306dccad3e2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "538331572700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:538331572700:vpc/vpc-065a831348bb98c54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c832406db1739a4b",
            "default_route_table_id": "rtb-0ec768c1300cfcb4e",
            "default_security_group_id": "sg-0b980aec56442b797",
            "dhcp_options_id": "dopt-257f615f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065a831348bb98c54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec768c1300cfcb4e",
            "owner_id": "538331572700",
            "tags": {
              "Name": "master-vpc-jenkins"
            },
            "tags_all": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_master_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:538331572700:vpc/vpc-0bed8dc525d176515",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a48f833256d0d85a",
            "default_route_table_id": "rtb-0476913c222d5fb65",
            "default_security_group_id": "sg-0072723c3b008427f",
            "dhcp_options_id": "dopt-8c6d2de7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bed8dc525d176515",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0476913c222d5fb65",
            "owner_id": "538331572700",
            "tags": {
              "Name": "worker-vpc-jenkins"
            },
            "tags_all": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1-uswest2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0fa02d76049f1fc9a",
            "peer_owner_id": "538331572700",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0bed8dc525d176515",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc_pcon_useast1-uswest2"
            },
            "tags_all": {
              "Name": "vpc_pcon_useast1-uswest2"
            },
            "vpc_id": "vpc-065a831348bb98c54"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fa02d76049f1fc9a",
            "peer_owner_id": "538331572700",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0bed8dc525d176515",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-065a831348bb98c54",
            "vpc_peering_connection_id": "pcx-0fa02d76049f1fc9a"
          },
          "dependencies": [
            "aws_vpc.vpc_master",
            "aws_vpc.vpc_master_oregon",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    }
  ]
}